styles.css
/* Site Design

    + White bg
    + Black/dark blue text
    + Links down right side
    + Solid bar between them and main content on each page

*/

* {
    margin:0;
    padding: 0;
}

body {
    /* sets default font and size */
    font-size: 16px;
    font-family: sans-serif;

    /* The margin pushes all the content away from the edges of the viewport by 30px*/
    margin: 0 30px;
    margin-bottom: 30px;
}

h1 {
    text-transform: uppercase;
    margin-top: 40px;
}

h2 {
    margin-top: 40px;
}

legend {
    text-transform: uppercase;
}

img {
    max-width: 100%;
}

/* change this, this is a bad selector. Class maybe? */
div[class="daily-brags"] > ul {
    margin: 30px 0;
}

/* use daily-brags class to style brags page */

a {
    /* unsure of good color choice here */
}

a:hover {
    color: aquamarine;
    background-color: rgba( 20, 20, 20, 0.5);
    border-radius: 5px;
}

@media (max-width: 1200px) {

    body {
        color: darkslategray;
        margin: 0 30px;
    }

    ul {
        margin: 0 30px;
    }

}

